# pastcast

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  README.md  SECURITY.md  rustfmt.toml
.github/workflows/: rust.yml
migrations/: 20250719110611_uuid.sql  20250719123451_weather_tables.sql
src/: configs.rs  db.rs  handlers.rs  main.rs  models.rs  repositories.rs  router.rs  services.rs
src/config/: app_state.rs  config.rs
src/configs/: config.rs  state.rs  weather_stack.rs
src/handlers/: weather.rs  weather_handlers.rs
src/models/: weather_day.rs  weather_hourly.rs
src/repositories/: weather_repositories.rs
src/services/: weather_service.rs
