[package]
name = "pastcast"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
chrono = { version = "0.4.41", features = ["serde"] }
dotenv = "0.15.0"
reqwest = { version = "0.12.22", features = ["json"] }
serde = "1.0.219"
serde_json = "1.0.141"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "macros", "uuid", "chrono"] }
tokio = { version = "1.46.1", features = ["full"] }
tracing-subscriber = "0.3.19"
uuid = { version = "1.17.0", features = ["serde"] }
